--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav  ">
             <li class="nav-item">
-              <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-light" aria-current="page" href="#Education">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled text-light" aria-disabled="true">Disabled</a>
@@ -53,13 +53,13 @@
               <a class="nav-link text-light" href="#">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="#">Gallery</a>
+              <a class="nav-link text-light" href="#Gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="#">About</a>
+              <a class="nav-link text-light" href="#About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="#">Contact</a>
+              <a class="nav-link text-light" href="#Contact">Contact</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -71,7 +71,7 @@
   </nav>
 
   <!-- start slider    -->
-  <div class=" slider-wrapper p-5 ">
+  <div id="Education" class=" slider-wrapper p-5 ">
     <div class="slider min-vh-100 bg-cover d-flex align-items-center justify-content-between">
         <div class="container">
             <div class="row d-sm-flex text-center align-items-center justify-content-between">
@@ -468,7 +468,7 @@
             </div>
             <div class="col-lg-6 col-md-12  col-sm-12 ">
               <div class="sequer  d-none d-lg-block"></div>
-              <img class="img-fluid   d-none d-lg-block" src="././assets/images/ch2.jpg" alt="img"/>
+              <video class="   d-none d-lg-block" src="././assets/videos/4_5766064998711297239.mp4"></video>
             </div></div>
         </div>
     </div>
@@ -712,7 +712,7 @@
   <footer class="mt-5 bg-primary p-5 text-white ">
     <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-12">
+      <div id="About" class="col-lg-3 col-md-6 col-sm-12">
         <h3 class="mb-4">About Us</h3>
         <p class="text-white ">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
            Molestias facilis, corrupti labore cum exercitationem,
@@ -753,7 +753,7 @@
         </ul>
       </div>
 
-      <div class="three col-lg-3 col-md-6 col-sm-12">
+      <div id="Gallery" class="three col-lg-3 col-md-6 col-sm-12">
         <h3 class="text-white mb-4">Gallery</h3>
         <div class="d-flex  ">
           <img src="./assets/images/ch7.jpg" alt="">
@@ -769,8 +769,8 @@
         </div>
       </div>
       
-      <div class=" four col-lg-3 col-md-6 col-sm-12">
-        <h3 class="text-white mb-4">Contact</h3>
+      <div id="Contact" class=" four col-lg-3 col-md-6 col-sm-12">
+        <h3  class="text-white mb-4">Contact</h3>
         <p class="text-white">43 Raymoth Rd.Baltemoer,London 3910</p>
         <p class="text-light">+1(123)-456-7890</p>
         <p class="text-light">+1(123)-456-7890</p>
