--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="top-nav  p-2">
       <div class="container">
           <div class="row justify-content-between">
-              <div class="col-auto d-flex align-items-center ">
+              <div class="col-auto part d-flex align-items-center ">
                   <a class="nav-link text-light"  href="#"><i class="fa-regular fa-circle-question" ></i>  Have a Questions ? </a>
                   <a class="nav-link text-light" href="#"><i class="fa-solid fa-phone"></i>  10 20 123 456</a>
                   <a class="nav-link text-light" href="#"><i class="fa-solid fa-envelope"></i>  info@mydomain.com</a>
